# MegaTeam

./: README.md
Milestone 1/: CMakeLists.txt  M1.cpp  Makefile  MicroM2  MicroM2.cbp  cmake_install.cmake
Milestone 2/: CMakeLists.txt  M2.cpp  Makefile  cmake_install.cmake
Milestone 3/: CMakeLists.txt  M3.cpp  Makefile  MicroM2  MicroM2.cbp  MicroM3  MicroM3.cbp  cmake_install.cmake
Milestone 4/: CMakeLists.txt  Makefile  MicroM4  MicroM4.cbp  MicroM4.cpp  cmake_install.cmake
